// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationCard: index mapStateToProps with default state 1`] = `
Object {
  "isLoading": false,
  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
}
`;

exports[`ApplicationCard: index set initial state with no values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ApplicationCard
    app={
      Object {
        "address": undefined,
        "appName": undefined,
        "isLoading": false,
        "url": undefined,
        "version": undefined,
      }
    }
    launchApp={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="col-sm-2 text-right"
        >
          <i
            aria-hidden="true"
            className="fa fa-rocket fa-5x"
          />
        </div>
        <div
          className="col-sm-10"
        >
          <div
            className="row"
          >
            <div
              className="col-sm-10"
            >
              <div
                className="heading"
              >
                <strong>
                   
                   
                </strong>
                 - 
                <span>
                   v
                   
                </span>
              </div>
            </div>
            <div
              className="col-sm-2"
            >
              <a
                rel="noopener noreferrer"
              >
                <button
                  className="pt-button pt-intent-primary pull-right"
                  onClick={[Function]}
                >
                  Launch
                </button>
              </a>
            </div>
          </div>
          <div
            className="neutral-baseline"
          />
          <div
            className="row content"
          >
            <div
              className="col-sm-12"
            />
          </div>
        </div>
      </div>,
      "className": "pt-card app-card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-sm-2 text-right"
          >
            <i
              aria-hidden="true"
              className="fa fa-rocket fa-5x"
            />
          </div>,
          <div
            className="col-sm-10"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-10"
              >
                <div
                  className="heading"
                >
                  <strong>
                     
                     
                  </strong>
                   - 
                  <span>
                     v
                     
                  </span>
                </div>
              </div>
              <div
                className="col-sm-2"
              >
                <a
                  rel="noopener noreferrer"
                >
                  <button
                    className="pt-button pt-intent-primary pull-right"
                    onClick={[Function]}
                  >
                    Launch
                  </button>
                </a>
              </div>
            </div>
            <div
              className="neutral-baseline"
            />
            <div
              className="row content"
            >
              <div
                className="col-sm-12"
              />
            </div>
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <i
              aria-hidden="true"
              className="fa fa-rocket fa-5x"
            />,
            "className": "col-sm-2 text-right",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-hidden": "true",
              "className": "fa fa-rocket fa-5x",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row"
              >
                <div
                  className="col-sm-10"
                >
                  <div
                    className="heading"
                  >
                    <strong>
                       
                       
                    </strong>
                     - 
                    <span>
                       v
                       
                    </span>
                  </div>
                </div>
                <div
                  className="col-sm-2"
                >
                  <a
                    rel="noopener noreferrer"
                  >
                    <button
                      className="pt-button pt-intent-primary pull-right"
                      onClick={[Function]}
                    >
                      Launch
                    </button>
                  </a>
                </div>
              </div>,
              <div
                className="neutral-baseline"
              />,
              <div
                className="row content"
              >
                <div
                  className="col-sm-12"
                />
              </div>,
            ],
            "className": "col-sm-10",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="col-sm-10"
                  >
                    <div
                      className="heading"
                    >
                      <strong>
                         
                         
                      </strong>
                       - 
                      <span>
                         v
                         
                      </span>
                    </div>
                  </div>,
                  <div
                    className="col-sm-2"
                  >
                    <a
                      rel="noopener noreferrer"
                    >
                      <button
                        className="pt-button pt-intent-primary pull-right"
                        onClick={[Function]}
                      >
                        Launch
                      </button>
                    </a>
                  </div>,
                ],
                "className": "row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="heading"
                    >
                      <strong>
                         
                         
                      </strong>
                       - 
                      <span>
                         v
                         
                      </span>
                    </div>,
                    "className": "col-sm-10",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <strong>
                           
                           
                        </strong>,
                        " - ",
                        <span>
                           v
                           
                        </span>,
                      ],
                      "className": "heading",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            " ",
                            undefined,
                            " ",
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          " ",
                          undefined,
                          " ",
                        ],
                        "type": "strong",
                      },
                      " - ",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            " v",
                            undefined,
                            " ",
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          " v",
                          undefined,
                          " ",
                        ],
                        "type": "span",
                      },
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      rel="noopener noreferrer"
                    >
                      <button
                        className="pt-button pt-intent-primary pull-right"
                        onClick={[Function]}
                      >
                        Launch
                      </button>
                    </a>,
                    "className": "col-sm-2",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <button
                        className="pt-button pt-intent-primary pull-right"
                        onClick={[Function]}
                      >
                        Launch
                      </button>,
                      "rel": "noopener noreferrer",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Launch",
                        "className": "pt-button pt-intent-primary pull-right",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "Launch",
                      "type": "button",
                    },
                    "type": "a",
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "neutral-baseline",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="col-sm-12"
                />,
                "className": "row content",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "col-sm-12",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="col-sm-2 text-right"
          >
            <i
              aria-hidden="true"
              className="fa fa-rocket fa-5x"
            />
          </div>
          <div
            className="col-sm-10"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-10"
              >
                <div
                  className="heading"
                >
                  <strong>
                     
                     
                  </strong>
                   - 
                  <span>
                     v
                     
                  </span>
                </div>
              </div>
              <div
                className="col-sm-2"
              >
                <a
                  rel="noopener noreferrer"
                >
                  <button
                    className="pt-button pt-intent-primary pull-right"
                    onClick={[Function]}
                  >
                    Launch
                  </button>
                </a>
              </div>
            </div>
            <div
              className="neutral-baseline"
            />
            <div
              className="row content"
            >
              <div
                className="col-sm-12"
              />
            </div>
          </div>
        </div>,
        "className": "pt-card app-card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-2 text-right"
            >
              <i
                aria-hidden="true"
                className="fa fa-rocket fa-5x"
              />
            </div>,
            <div
              className="col-sm-10"
            >
              <div
                className="row"
              >
                <div
                  className="col-sm-10"
                >
                  <div
                    className="heading"
                  >
                    <strong>
                       
                       
                    </strong>
                     - 
                    <span>
                       v
                       
                    </span>
                  </div>
                </div>
                <div
                  className="col-sm-2"
                >
                  <a
                    rel="noopener noreferrer"
                  >
                    <button
                      className="pt-button pt-intent-primary pull-right"
                      onClick={[Function]}
                    >
                      Launch
                    </button>
                  </a>
                </div>
              </div>
              <div
                className="neutral-baseline"
              />
              <div
                className="row content"
              >
                <div
                  className="col-sm-12"
                />
              </div>
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                aria-hidden="true"
                className="fa fa-rocket fa-5x"
              />,
              "className": "col-sm-2 text-right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "className": "fa fa-rocket fa-5x",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="row"
                >
                  <div
                    className="col-sm-10"
                  >
                    <div
                      className="heading"
                    >
                      <strong>
                         
                         
                      </strong>
                       - 
                      <span>
                         v
                         
                      </span>
                    </div>
                  </div>
                  <div
                    className="col-sm-2"
                  >
                    <a
                      rel="noopener noreferrer"
                    >
                      <button
                        className="pt-button pt-intent-primary pull-right"
                        onClick={[Function]}
                      >
                        Launch
                      </button>
                    </a>
                  </div>
                </div>,
                <div
                  className="neutral-baseline"
                />,
                <div
                  className="row content"
                >
                  <div
                    className="col-sm-12"
                  />
                </div>,
              ],
              "className": "col-sm-10",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="col-sm-10"
                    >
                      <div
                        className="heading"
                      >
                        <strong>
                           
                           
                        </strong>
                         - 
                        <span>
                           v
                           
                        </span>
                      </div>
                    </div>,
                    <div
                      className="col-sm-2"
                    >
                      <a
                        rel="noopener noreferrer"
                      >
                        <button
                          className="pt-button pt-intent-primary pull-right"
                          onClick={[Function]}
                        >
                          Launch
                        </button>
                      </a>
                    </div>,
                  ],
                  "className": "row",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="heading"
                      >
                        <strong>
                           
                           
                        </strong>
                         - 
                        <span>
                           v
                           
                        </span>
                      </div>,
                      "className": "col-sm-10",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <strong>
                             
                             
                          </strong>,
                          " - ",
                          <span>
                             v
                             
                          </span>,
                        ],
                        "className": "heading",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              " ",
                              undefined,
                              " ",
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            " ",
                            undefined,
                            " ",
                          ],
                          "type": "strong",
                        },
                        " - ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              " v",
                              undefined,
                              " ",
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            " v",
                            undefined,
                            " ",
                          ],
                          "type": "span",
                        },
                      ],
                      "type": "div",
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        rel="noopener noreferrer"
                      >
                        <button
                          className="pt-button pt-intent-primary pull-right"
                          onClick={[Function]}
                        >
                          Launch
                        </button>
                      </a>,
                      "className": "col-sm-2",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <button
                          className="pt-button pt-intent-primary pull-right"
                          onClick={[Function]}
                        >
                          Launch
                        </button>,
                        "rel": "noopener noreferrer",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Launch",
                          "className": "pt-button pt-intent-primary pull-right",
                          "onClick": [Function],
                        },
                        "ref": null,
                        "rendered": "Launch",
                        "type": "button",
                      },
                      "type": "a",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "neutral-baseline",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="col-sm-12"
                  />,
                  "className": "row content",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "col-sm-12",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`ApplicationCard: index set initial state with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ApplicationCard
    app={
      Object {
        "address": "e80b681c42f831ea3c4b8db531f5e165",
        "appName": "dAPP",
        "isLoading": true,
        "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
        "version": "1.0",
      }
    }
    launchApp={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="col-sm-2 text-right"
        >
          <i
            aria-hidden="true"
            className="fa fa-rocket fa-5x"
          />
        </div>
        <div
          className="col-sm-10"
        >
          <div
            className="row"
          >
            <div
              className="col-sm-10"
            >
              <div
                className="heading"
              >
                <strong>
                   
                  dAPP
                   
                </strong>
                 - 
                <span>
                   v
                  1.0
                   
                </span>
              </div>
            </div>
            <div
              className="col-sm-2"
            >
              <Loading
                className="pull-right"
                color="#f5f8fa"
                delay={1000}
                height={0}
                type="bars"
                width={30}
              />
            </div>
          </div>
          <div
            className="neutral-baseline"
          />
          <div
            className="row content"
          >
            <div
              className="col-sm-12"
            />
          </div>
        </div>
      </div>,
      "className": "pt-card app-card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-sm-2 text-right"
          >
            <i
              aria-hidden="true"
              className="fa fa-rocket fa-5x"
            />
          </div>,
          <div
            className="col-sm-10"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-10"
              >
                <div
                  className="heading"
                >
                  <strong>
                     
                    dAPP
                     
                  </strong>
                   - 
                  <span>
                     v
                    1.0
                     
                  </span>
                </div>
              </div>
              <div
                className="col-sm-2"
              >
                <Loading
                  className="pull-right"
                  color="#f5f8fa"
                  delay={1000}
                  height={0}
                  type="bars"
                  width={30}
                />
              </div>
            </div>
            <div
              className="neutral-baseline"
            />
            <div
              className="row content"
            >
              <div
                className="col-sm-12"
              />
            </div>
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <i
              aria-hidden="true"
              className="fa fa-rocket fa-5x"
            />,
            "className": "col-sm-2 text-right",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-hidden": "true",
              "className": "fa fa-rocket fa-5x",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row"
              >
                <div
                  className="col-sm-10"
                >
                  <div
                    className="heading"
                  >
                    <strong>
                       
                      dAPP
                       
                    </strong>
                     - 
                    <span>
                       v
                      1.0
                       
                    </span>
                  </div>
                </div>
                <div
                  className="col-sm-2"
                >
                  <Loading
                    className="pull-right"
                    color="#f5f8fa"
                    delay={1000}
                    height={0}
                    type="bars"
                    width={30}
                  />
                </div>
              </div>,
              <div
                className="neutral-baseline"
              />,
              <div
                className="row content"
              >
                <div
                  className="col-sm-12"
                />
              </div>,
            ],
            "className": "col-sm-10",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="col-sm-10"
                  >
                    <div
                      className="heading"
                    >
                      <strong>
                         
                        dAPP
                         
                      </strong>
                       - 
                      <span>
                         v
                        1.0
                         
                      </span>
                    </div>
                  </div>,
                  <div
                    className="col-sm-2"
                  >
                    <Loading
                      className="pull-right"
                      color="#f5f8fa"
                      delay={1000}
                      height={0}
                      type="bars"
                      width={30}
                    />
                  </div>,
                ],
                "className": "row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="heading"
                    >
                      <strong>
                         
                        dAPP
                         
                      </strong>
                       - 
                      <span>
                         v
                        1.0
                         
                      </span>
                    </div>,
                    "className": "col-sm-10",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <strong>
                           
                          dAPP
                           
                        </strong>,
                        " - ",
                        <span>
                           v
                          1.0
                           
                        </span>,
                      ],
                      "className": "heading",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            " ",
                            "dAPP",
                            " ",
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          " ",
                          "dAPP",
                          " ",
                        ],
                        "type": "strong",
                      },
                      " - ",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            " v",
                            "1.0",
                            " ",
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          " v",
                          "1.0",
                          " ",
                        ],
                        "type": "span",
                      },
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Loading
                      className="pull-right"
                      color="#f5f8fa"
                      delay={1000}
                      height={0}
                      type="bars"
                      width={30}
                    />,
                    "className": "col-sm-2",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "pull-right",
                      "color": "#f5f8fa",
                      "delay": 1000,
                      "height": 0,
                      "type": "bars",
                      "width": 30,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "neutral-baseline",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="col-sm-12"
                />,
                "className": "row content",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "col-sm-12",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="col-sm-2 text-right"
          >
            <i
              aria-hidden="true"
              className="fa fa-rocket fa-5x"
            />
          </div>
          <div
            className="col-sm-10"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-10"
              >
                <div
                  className="heading"
                >
                  <strong>
                     
                    dAPP
                     
                  </strong>
                   - 
                  <span>
                     v
                    1.0
                     
                  </span>
                </div>
              </div>
              <div
                className="col-sm-2"
              >
                <Loading
                  className="pull-right"
                  color="#f5f8fa"
                  delay={1000}
                  height={0}
                  type="bars"
                  width={30}
                />
              </div>
            </div>
            <div
              className="neutral-baseline"
            />
            <div
              className="row content"
            >
              <div
                className="col-sm-12"
              />
            </div>
          </div>
        </div>,
        "className": "pt-card app-card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-2 text-right"
            >
              <i
                aria-hidden="true"
                className="fa fa-rocket fa-5x"
              />
            </div>,
            <div
              className="col-sm-10"
            >
              <div
                className="row"
              >
                <div
                  className="col-sm-10"
                >
                  <div
                    className="heading"
                  >
                    <strong>
                       
                      dAPP
                       
                    </strong>
                     - 
                    <span>
                       v
                      1.0
                       
                    </span>
                  </div>
                </div>
                <div
                  className="col-sm-2"
                >
                  <Loading
                    className="pull-right"
                    color="#f5f8fa"
                    delay={1000}
                    height={0}
                    type="bars"
                    width={30}
                  />
                </div>
              </div>
              <div
                className="neutral-baseline"
              />
              <div
                className="row content"
              >
                <div
                  className="col-sm-12"
                />
              </div>
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                aria-hidden="true"
                className="fa fa-rocket fa-5x"
              />,
              "className": "col-sm-2 text-right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "className": "fa fa-rocket fa-5x",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="row"
                >
                  <div
                    className="col-sm-10"
                  >
                    <div
                      className="heading"
                    >
                      <strong>
                         
                        dAPP
                         
                      </strong>
                       - 
                      <span>
                         v
                        1.0
                         
                      </span>
                    </div>
                  </div>
                  <div
                    className="col-sm-2"
                  >
                    <Loading
                      className="pull-right"
                      color="#f5f8fa"
                      delay={1000}
                      height={0}
                      type="bars"
                      width={30}
                    />
                  </div>
                </div>,
                <div
                  className="neutral-baseline"
                />,
                <div
                  className="row content"
                >
                  <div
                    className="col-sm-12"
                  />
                </div>,
              ],
              "className": "col-sm-10",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="col-sm-10"
                    >
                      <div
                        className="heading"
                      >
                        <strong>
                           
                          dAPP
                           
                        </strong>
                         - 
                        <span>
                           v
                          1.0
                           
                        </span>
                      </div>
                    </div>,
                    <div
                      className="col-sm-2"
                    >
                      <Loading
                        className="pull-right"
                        color="#f5f8fa"
                        delay={1000}
                        height={0}
                        type="bars"
                        width={30}
                      />
                    </div>,
                  ],
                  "className": "row",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="heading"
                      >
                        <strong>
                           
                          dAPP
                           
                        </strong>
                         - 
                        <span>
                           v
                          1.0
                           
                        </span>
                      </div>,
                      "className": "col-sm-10",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <strong>
                             
                            dAPP
                             
                          </strong>,
                          " - ",
                          <span>
                             v
                            1.0
                             
                          </span>,
                        ],
                        "className": "heading",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              " ",
                              "dAPP",
                              " ",
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            " ",
                            "dAPP",
                            " ",
                          ],
                          "type": "strong",
                        },
                        " - ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              " v",
                              "1.0",
                              " ",
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            " v",
                            "1.0",
                            " ",
                          ],
                          "type": "span",
                        },
                      ],
                      "type": "div",
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Loading
                        className="pull-right"
                        color="#f5f8fa"
                        delay={1000}
                        height={0}
                        type="bars"
                        width={30}
                      />,
                      "className": "col-sm-2",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": "pull-right",
                        "color": "#f5f8fa",
                        "delay": 1000,
                        "height": 0,
                        "type": "bars",
                        "width": 30,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "neutral-baseline",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="col-sm-12"
                  />,
                  "className": "row content",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "col-sm-12",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
